# workflow-automation

./: .env.example  .gitignore  .venv  Caddyfile  Dockerfile  Dockerfile.ai  Dockerfile.frontend  README.md  conftest.py  docker-compose.integrations.yml  docker-compose.ops.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
ai_audit/: apps.py  models.py  services.py  urls.py  views.py
ai_audit/migrations/: 0001_initial.py  0002_llmcall_append_only.py  0003_ai_audit_rls.py
ai_audit/tests/: test_cross_tenant_isolation.py  test_ingest.py
ai_service/: auth.py  config.py  db.py  limits.py  main.py
ai_service/agents/: document_extract.py  email_parse.py  followup_draft.py
ai_service/eval/: harness.py
ai_service/eval/golden/: email_parse.jsonl
ai_service/llm/: embeddings.py  factory.py  langsmith.py
ai_service/routes/: agents.py  health.py  search.py
ai_service/safety/: input_guards.py  output_guards.py  pii.py
ai_service/tests/: test_agent_auth.py  test_auth.py  test_config.py  test_db.py  test_document_extract_agent.py  test_email_parse_agent.py  test_embeddings.py  test_eval_harness.py  test_factory.py  test_followup_draft_agent.py  test_guards.py  test_health.py  test_langsmith.py  test_limits.py  test_metrics_route.py  test_pii.py  test_retrieve_examples.py
audit/: __init__.py  apps.py  models.py  services.py
audit/migrations/: 0001_initial.py  0002_append_only.py  0003_audit_rls.py
audit/tests/: test_services.py
dashboard/: urls.py  views.py
dashboard/tests/: test_api.py
dataentry/: models.py  serializers.py  tasks.py  urls.py  views.py
dataentry/adapters/: csv_xlsx.py  email_basic.py  form.py  webhook.py
dataentry/migrations/: 0001_initial.py  0002_dataentry_rls.py
dataentry/tests/: test_adapters.py  test_api.py  test_cross_tenant_isolation.py  test_models.py  test_pipeline.py
docker/postgres-init/: 00-pgvector.sql  01-nosuperuser.sql
docs/superpowers/plans/: 2026-07-18-01-foundation.md  2026-07-18-02-workflows.md  2026-07-18-03-integrations.md  2026-07-18-04-onboarding.md  2026-07-18-05-invoicing.md  2026-07-18-06-followups.md  2026-07-18-07-dataentry.md  2026-07-18-08-ai-service.md  2026-07-18-09-ai-agents-safety.md  2026-07-18-10-frontend.md  2026-07-18-11-load-eval-ops.md
docs/superpowers/specs/: 2026-07-18-workflow-automation-design.md
followups/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
followups/migrations/: 0001_initial.py  0002_followups_rls.py  0003_reminder_draft_text_alter_reminder_status.py  0004_successfulfollowup.py  0005_successfulfollowup_rls.py
followups/tests/: test_api.py  test_approve.py  test_cross_tenant_isolation.py  test_models.py  test_services.py  test_tasks.py
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.js  vite.config.ts
frontend/e2e/: admin-onboarding.spec.ts  client-invoice.spec.ts
frontend/src/: main.tsx
frontend/src/admin-portal/: AuditLog.tsx  Clients.tsx  Dashboard.tsx  DataEntry.tsx  DraftReview.tsx  Followups.tsx  Invoices.tsx
frontend/src/api/: client.ts
frontend/src/app-shell/: App.tsx  AuthProvider.tsx  Login.tsx  RoleGuard.tsx  TenantProvider.tsx  app.css
frontend/src/client-portal/: Invoices.tsx  Status.tsx
frontend/src/tests/: auth.test.tsx  clients.test.tsx  role-guard.test.tsx  ui-kit.test.tsx
frontend/src/ui-kit/: Button.css  Button.tsx  Input.css  Input.tsx  Modal.css  Modal.tsx  Table.css  Table.tsx  Toast.css  Toast.tsx  index.ts  tokens.css
integrations/: base.py  models.py  services.py
integrations/billing/: invoice_ninja.py
integrations/chat/: mattermost.py
integrations/crm/: suitecrm.py
integrations/email/: django_smtp.py
integrations/migrations/: 0001_initial.py  0002_integrationconfig_vendor.py
integrations/storage/: minio_client.py  nextcloud.py
integrations/tests/: test_base.py  test_email.py  test_invoice_ninja.py  test_mattermost.py  test_minio.py  test_nextcloud.py  test_services.py  test_suitecrm.py
invoices/: models.py  pdf.py  serializers.py  services.py  tasks.py  urls.py  views.py
invoices/migrations/: 0001_initial.py  0002_invoices_rls.py  0003_invoices_recurring_failure_count.py
invoices/tests/: test_cross_tenant_isolation.py  test_models.py  test_pdf.py  test_recurring.py  test_services.py
onboarding/: apps.py  handlers.py  models.py  serializers.py  services.py  step_runners.py  urls.py  views.py
onboarding/migrations/: 0001_initial.py  0002_onboarding_rls.py  0003_onboardingrun_counters.py
onboarding/tests/: test_api.py  test_cross_tenant_isolation.py  test_flow.py  test_models.py  test_services.py
ops/dashboards/: README.md  alertmanager.yml  prometheus.yml
ops/eval/: run_nightly.py  thresholds.yaml
ops/locust/: locustfile.py  seed_load_user.py  users_admin.py  users_ai.py
ops/runbooks/: incident.md  scaling.md
ops/tests/: test_dashboards.py  test_locust_files.py  test_make_real.py  test_run_nightly.py
tenants/: __init__.py  apps.py  managers.py  middleware.py  models.py  rls.py  services.py
tenants/migrations/: 0001_initial.py  0002_initial.py  0003_tenant_rls.py  0004_tenant_webhook_secret.py
tenants/tests/: test_middleware.py  test_models.py  test_rls.py  test_services.py
tests/: conftest.py  test_cross_tenant_isolation.py
users/: __init__.py  apps.py  models.py  permissions.py  urls.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
users/tests/: test_api.py  test_models.py  test_permissions.py
wa_main/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
wa_main/settings/: base.py  dev.py  test.py
workflows/: exceptions.py  models.py  registry.py  services.py  tasks.py
workflows/migrations/: 0001_initial.py  0002_rls.py  0003_alter_taskrecord_event.py
workflows/tests/: test_audit.py  test_cross_tenant_isolation.py  test_models.py  test_registry.py  test_retries.py  test_services.py
