[project]
name = "workflow-automation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15",
  "djangorestframework-simplejwt>=5.3",
  "psycopg[binary]>=3.1",
  "celery[redis]>=5.4",
  "redis>=5.0",
  "python-dotenv>=1.0",
  "minio>=7.2",
  "httpx>=0.27",
  "reportlab>=4.0",
  "openpyxl>=3.1",
  "mail-parser>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.5",
  "black>=24.4",
  "pydocstyle>=6.3",
  "mypy>=1.10",
  "django-stubs[compatible]>=5.0",
  "djangorestframework-stubs>=3.15",
  "respx>=0.21",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydocstyle>=6.3",
]
ai = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "langchain-core>=0.3",
  "langchain-community>=0.3",
  "langchain-ollama>=0.2",
  "langchain-postgres>=0.0.12",
  "langchain-openai>=0.2",
  "langgraph>=0.2",
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "unstructured>=0.15",
  "pymupdf>=1.24",
  "psycopg[binary]>=3.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["**/migrations/**", "*.yml", "*.yaml"]
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]

[tool.black]
line-length = 88
target-version = ["py312"]
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.pants\.d
  | \.svn
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | node_modules
  | \.yml
  | \.yaml
)/
'''

[tool.pydocstyle]
convention = "google"
match-dir = "(tenants|users|audit|wa_main)"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["migrations/"]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "wa_main.settings.test"

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "rest_framework.*",
  "rest_framework_simplejwt.*",
  "rest_framework_simplejwt.authentication",
  "rest_framework_simplejwt.serializers",
  "rest_framework_simplejwt.tokens",
  "rest_framework_simplejwt.models",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wa_main.settings.test"
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.setuptools.packages.find]
where = ["."]
include = ["tenants*", "users*", "audit*", "wa_main*", "workflows*", "integrations*", "onboarding*", "invoices*", "followups*", "dataentry*", "ai_service*"]
exclude = ["tests*", "docs*", "docker*", "**/migrations*", "**/tests*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
